--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -34,13 +34,23 @@ header.masthead {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
 }
 
 @media (min-width: 768px) {
   .banner {
     height: 700px;
   }
+  .banner {
+    padding-top: 150px;
+    padding-bottom: 50px;
+    color: #eaeaea;
+    background-image: url("../img/field.jpg");
+    width: 100%;
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
   .parallax {
       /* The image used */
       background-image: url("../img/stars.jpg");
