--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -51,6 +51,7 @@ header.masthead {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+  }
   .parallax {
       /* The image used */
       background-image: url("../img/stars.jpg");
