--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,11 +1,3 @@
-header.masthead {
-  h2 {
-    line-height: 1.5rem;
-  }
-  height: 300px;
-  position: relative;
-}
-
 .banner h1 {
   color: $gray-100;
   font-size: 40px;
@@ -36,10 +28,22 @@ header.masthead {
   background-size: cover;
 }
 
+.banner-featured {
+  padding-top: 150px;
+  padding-bottom: 50px;
+  color: #eaeaea;
+  background-image: url("../img/featured-banner.jpg");
+  width: 100%;
+  height: 300px;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+
 @media (min-width: 768px) {
-  .banner {
-    height: 700px;
-  }
   .banner {
     padding-top: 150px;
     padding-bottom: 50px;
@@ -51,6 +55,24 @@ header.masthead {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+  }
+  .banner-featured {
+    padding-top: 225px;
+    padding-bottom: 50px;
+    color: #eaeaea;
+    background-image: url("../img/featured-banner.jpg");
+    width: 100%;
+    height: 450px;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  .banner h1 {
+    font-size: 50px;
+  }
+  .banner h5 {
+    font-weight: 300;
   }
   .parallax {
       /* The image used */
@@ -79,21 +101,6 @@ header.masthead {
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-  }
-  header.masthead {
-    height: 500px;
-  }
-
-  .banner {
-    padding-top: 200px;
-    padding-bottom: 150px;
-    color: #eaeaea;
-  }
-  .banner h1 {
-    font-size: 60px;
-  }
-  .banner h5 {
-    font-weight: 300;
   }
 
 
