--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -279,10 +279,10 @@ section h2 {
   padding-top: 150px;
   padding-bottom: 50px;
   color: #eaeaea;
-  background-image: url("../img/field.jpg");
+  background-image: url("../img/field-phone.jpg");
   width: 100%;
   height: 600px;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -304,7 +304,7 @@ section h2 {
   padding-top: 150px;
   padding-bottom: 50px;
   color: #eaeaea;
-  background-image: url("../img/projects/mpvr/mpvr-banner.jpg");
+  background-image: url("../img/projects/mpvr/mpvr-phone.jpg");
   width: 100%;
   height: 300px;
   background-position: top;
@@ -399,8 +399,27 @@ section h2 {
 @media (min-width: 768px) {
   .banner {
     margin-top: 0;
+    padding-top: 150px;
+    padding-bottom: 50px;
+    color: #eaeaea;
+    background-image: url("../img/field.jpg");
+    width: 100%;
     height: 600px;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  .banner-mpvr {
+    padding-top: 150px;
+    padding-bottom: 50px;
+    color: #eaeaea;
+    background-image: url("../img/projects/mpvr/mpvr-banner.jpg");
+    width: 100%;
+    height: 300px;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .banner h1 {
     font-size: 50px;
