--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -149,7 +149,23 @@ section h2 {
   margin: 0 auto;
 }
 
+.pdf-l {
+  display: none;
+}
+
+.pdf-s {
+  display: block;
+  margin: 0 auto;
+}
+
 @media (min-width: 768px) {
+  .pdf-l {
+    display: block;
+    margin: 0 auto;
+  }
+  .pdf-s {
+    display: none;
+  }
   .vimeo-lg {
     display: none;
   }
@@ -281,7 +297,7 @@ section h2 {
   color: #eaeaea;
   background-image: url("../img/field-phone.jpg");
   width: 100%;
-  height: 600px;
+  height: 500px;
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
