--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -149,7 +149,22 @@ section h2 {
   margin: 0 auto;
 }
 
+.pdf {
+  display: none;
+}
+
+.pdf-text {
+  display: block;
+}
+
 @media (min-width: 768px) {
+  .pdf {
+    display: block;
+    margin: 0 auto;
+  }
+  .pdf-text {
+    display: none;
+  }
   .vimeo-lg {
     display: none;
   }
