--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -143,6 +143,18 @@
   background-size: cover;
 }
 
+.banner-perrault {
+  padding-top: 150px;
+  padding-bottom: 50px;
+  color: #eaeaea;
+  background-image: url("../img/projects/perrault/perrault-banner.jpg");
+  width: 100%;
+  height: 400px;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .banner-d {
   padding-top: 150px;
   padding-bottom: 50px;
