--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -495,6 +495,15 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
   animation: planet3circle 10s ease-in-out;
 }
 */
+.link {
+  color: #28c0f1;
+}
+
+.link:hover {
+  text-decoration: none;
+  color: #adb5bd;
+}
+
 @media (min-width: 768px) {
   .pdf {
     display: block;
