--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -1,10 +1,10 @@
 // Bootstrap overrides for this template
 a {
-  color: $gray-500;
+  color: $gray-900;
   &:focus,
   &:hover,
   &:active {
-    color: darken($primary, 10%);
+    color: $primary;
   }
 }
 
@@ -36,15 +36,16 @@ a {
 }
 
 .btn-primary {
-  border: solid 1px $gray-600;
-  background-color: rgba(0, 0, 0, 0.01);
-  color: $gray-700;
+  background-color: $primary;
+  border: solid 1px $primary;
+  color: white;
   &:hover,
   &:focus,
   &:active {
-    background-color: rgba(0, 0, 0, 0.01);
-    color: $primary;
-    border-color: darken($primary, 10%);
+    border: solid 1px $primary;
+    background-color: $primary;
+    color: $gray-800;
+    font-weight: 600;
   }
 }
 
@@ -79,6 +80,10 @@ button.bg-primary:focus {
   background-color: #717171 !important;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .card {
   border-color: $secondary;
   .card-header {
@@ -89,6 +94,10 @@ button.bg-primary:focus {
 
 .publications-lg {
   display: none;
+}
+
+.hh {
+  padding-top: 20px;
 }
 
 
@@ -112,5 +121,8 @@ button.bg-primary:focus {
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+  }
+  .hh {
+    padding-top: 50px;
   }
 }
