--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,6 +4,10 @@ body {
   @include body-font;
 }
 
+.btn-primary {
+  @include btn-font;
+}
+
 h1,
 h2,
 h3,
@@ -509,6 +513,32 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
   }
 }
 
+.gif {
+  max-width: 100%;
+}
+
+.c-logo-1 {
+  max-width: 35%;
+}
+
+.c-logo-2 {
+  max-width: 40%;
+}
+
+.c-logo-3 {
+  max-width: 55%;
+}
+
+.as {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.as-2 {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
 
 @media (min-width: 768px) {
   .pdf {
@@ -541,6 +571,23 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
     display: none;
   }
 
+  .c-logo-1 {
+    max-width: 15%;
+  }
+
+  .c-logo-2 {
+    max-width: 20%;
+  }
+
+  .c-logo-3 {
+    max-width: 30%;
+  }
+
+  .as {
+    max-width: 60%;
+    margin: 0 auto;
+  }
+
 }
 @media (min-width: 992px) {
 
@@ -566,7 +613,7 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
     background-size: contain;
     transition: all .3s;
     &:hover {
-      background: url("../img/han-06.jpg") no-repeat;
+      background: url("../img/portrait.jpg") no-repeat;
       width: 100%;
       height: 400px;
       background-position: right;
