--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -514,7 +514,7 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
 }
 
 .gif {
-  max-width: 100%;
+  max-width: 300px;
 }
 
 .c-logo-1 {
@@ -586,6 +586,10 @@ from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
   .as {
     max-width: 60%;
     margin: 0 auto;
+  }
+
+  .gif {
+    max-width: 500px;
   }
 
 }
