--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -194,6 +194,11 @@ section {
   display: none;
 }
 
+.as-text {
+  max-width: 665px;
+  margin: 0 auto;
+}
+
 /*test
 .all-content {
   position: absolute;
