--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -95,6 +95,18 @@
   background-size: cover;
 }
 
+.banner-octo {
+  padding-top: 150px;
+  padding-bottom: 50px;
+  color: #eaeaea;
+  background-image: url("../img/octo-banner.jpg");
+  width: 100%;
+  height: 400px;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .banner-mg {
   padding-top: 150px;
   padding-bottom: 50px;
