--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -3,12 +3,12 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   @include heading-font;
-    background-color: rgba($gray-900, .97);
+    background-color: rgba(white, .90);
   .navbar-brand {
     font-size: 14px;
   }
   .navbar-brand:hover {
-    color: $gray-800!important;
+    color: $gray-600!important;
   }
   .navbar-nav {
     margin-top: 1rem;
@@ -17,16 +17,16 @@
       text-align: right;
       font-size: 14px;
       a.nav-link {
-        color: $gray-600;
+        color: $gray-900;
         &:hover {
-          color: $primary;
+          color: $gray-600;
         }
         &:active,
         &:focus {
-          color: $primary;
+          color: $gray-600;
         }
         &.active {
-          color: $primary;
+          color: $gray-600;
         }
       }
     }
@@ -40,21 +40,8 @@
 .dropdown-item {
   font-size: 12px;
   &:hover {
-    color: $primary;
+    color: $gray-600;
   }
-  &:active,
-  &:focus {
-    background-color: $primary;
-    color: $gray-800;
-  }
-}
-
-.nav-link {
-  color: $gray-600;
-}
-
-.dropdown {
-  text-align: right;
 }
 
 
@@ -77,11 +64,11 @@
       margin-top: 0;
     }
     .navbar-nav > li.nav-item > a.nav-link.active {
-      color: $highlight;
+      color: $gray-900;
       &:active,
       &:focus,
       &:hover {
-        color: $highlight;
+        color: $gray-600;
       }
     }
   }
