--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -60,6 +60,9 @@ a {
 
 .fab, .fas {
   color: $gray-600;
+  &:hover {
+    color: $gray-900;
+  }
 }
 
 .btn-gray {
@@ -97,6 +100,12 @@ a:hover {
 
 .hh {
   padding-top: 20px;
+}
+
+.caption {
+  font-size: 14px;
+  font-style: italic;
+  color: $gray-700;
 }
 
 
