--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -38,7 +38,9 @@
 }
 
 .dropdown-item {
-  font-size: 12px;
+  font-size: 11px;
+  padding-left: 15px;
+  padding-right: 15px;
   &:hover {
     color: $gray-600;
   }
