--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -378,7 +378,7 @@ section h2 {
     transition: all .3s;
   }
   .luxe-card {
-    background-image: url("../img/projects/luxe/luxe-cover.png");
+    background-image: url("../img/cmg/luxe-cover.png");
     width: 100%;
     height: 250px;
     background-position: center;
@@ -387,7 +387,7 @@ section h2 {
     transition: all .2s;
   }
   .luxe-card:hover {
-    background: url("../img/projects/luxe/luxe-spread.png") no-repeat;
+    background: url("../img/cmg/luxe-spread.png") no-repeat;
     width: 100%;
     height: 250px;
     background-position: center;
@@ -396,7 +396,7 @@ section h2 {
     transition: all .2s;
   }
   .luxe-card-2 {
-    background-image: url("../img/projects/luxe/luxe-cover-fall.png");
+    background-image: url("../img/cmg/luxe-cover-fall.png");
     width: 100%;
     height: 250px;
     background-position: center;
@@ -405,7 +405,7 @@ section h2 {
     transition: all .2s;
   }
   .luxe-card-2:hover {
-    background: url("../img/projects/luxe/luxe-spread-2.png") no-repeat;
+    background: url("../img/cmg/luxe-spread-2.png") no-repeat;
     width: 100%;
     height: 250px;
     background-position: center;
@@ -1082,15 +1082,6 @@ a:hover {
 
 .ixdf-desktop-about {
   display: none;
-}
-
-@media (min-width: 475px) {
-  .ixdf-desktop {
-    display: block;
-  }
-  .ixdf-mobile {
-    display: none;
-  }
 }
 
 @media (min-width: 475px) {
