--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -406,7 +406,7 @@ section {
   }
 
   .luxe-card {
-    background-image: url("../img/projects/luxe/luxe-cover.png");
+    background-image: url("../img/cmg/luxe-cover.png");
     width: 100%;
     height: 250px;
     background-position: center;
@@ -414,7 +414,7 @@ section {
     background-size: contain;
     transition: all .2s;
     &:hover {
-      background: url("../img/projects/luxe/luxe-spread.png") no-repeat;
+      background: url("../img/cmg/luxe-spread.png") no-repeat;
       width: 100%;
       height: 250px;
       background-position: center;
@@ -425,7 +425,7 @@ section {
   }
 
   .luxe-card-2 {
-    background-image: url("../img/projects/luxe/luxe-cover-fall.png");
+    background-image: url("../img/cmg/luxe-cover-fall.png");
     width: 100%;
     height: 250px;
     background-position: center;
@@ -433,7 +433,7 @@ section {
     background-size: contain;
     transition: all .2s;
     &:hover {
-      background: url("../img/projects/luxe/luxe-spread-2.png") no-repeat;
+      background: url("../img/cmg/luxe-spread-2.png") no-repeat;
       width: 100%;
       height: 250px;
       background-position: center;
