pushing major improvements
there's still some jankiness to sort out, but I can do that later. Can't keep eyes open anymore.

--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -11,7 +11,7 @@ a {
 .project {
   transition: transform .2s;
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.015);
   }
 }
 
@@ -33,6 +33,15 @@ a {
 
 .text-secondary {
   color: $secondary !important;
+}
+
+.connect-links {
+  color: $gray-600 !important;
+  &:hover,
+  &:focus,
+  &:active {
+    color: $gray-900 !important;
+  }
 }
 
 .btn-primary {
