--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -22,6 +22,37 @@ h6 {
   width: 10%;
 }
 
+.scope-list {
+  list-style-type: none;
+  padding-right: 15px;
+  margin-left: -40px;
+  margin-right: -40px;
+}
+
+.scope-list li {
+  border-bottom: solid 1.25px #868e96;
+  padding-top: 10px;
+  padding-bottom: 1px;
+  font-size: 26px;
+}
+
+.hhi-border {
+  border: solid 1px #e9ecef;
+}
+
+.project-sub {
+  color: #808080;
+  font-weight: 600;
+  margin-top: -10px;
+  font-size: 15px;
+}
+
+.project-title {
+  font-weight: 600;
+  margin-top: -10px;
+  padding-bottom: 30px;
+}
+
 hr.star-dark,
 hr.star-light {
   max-width: 15rem;
@@ -116,6 +147,12 @@ section h2 {
 .bb {
   border-bottom: solid 1px #868e96;
   max-width: 700px;
+  margin: 0 auto;
+}
+
+.bb-footer {
+  border-bottom: solid 1px #868e96;
+  max-width: 1315px;
   margin: 0 auto;
 }
 
@@ -983,7 +1020,7 @@ a:focus, a:hover, a:active {
 }
 
 .project:hover {
-  transform: scale(1.05);
+  transform: scale(1.015);
 }
 
 .btn {
@@ -1004,6 +1041,14 @@ a:focus, a:hover, a:active {
 
 .text-secondary {
   color: rgba(248, 249, 250, 0.9) !important;
+}
+
+.connect-links {
+  color: #868e96 !important;
+}
+
+.connect-links:hover, .connect-links:focus, .connect-links:active {
+  color: #212529 !important;
 }
 
 .btn-primary {
