--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -20,7 +20,36 @@ h6 {
 }
 // Custom Horizontal Rule with Star Icon
 
+.btn-about {
+  background-color: #8b008b;
+  color: #efdbef;
+  font-weight: 400;
+  border-radius: 3px;
+  h3 {
+    font-size: 18px;
+  }
+  &:hover,
+  &:focus,
+  &:active {
+    border: solid 1px $gray-400;
+    background-color: $gray-400;
+    color: $gray-900;
+  }
+}
+
 .cmg-mobile {
+  display: none;
+}
+
+.certs-desktop {
+  display: none;
+}
+
+.skills-mobile {
+  display: block;
+}
+
+.skills-desktop {
   display: none;
 }
 
@@ -357,6 +386,23 @@ section {
 
 
 @media (min-width: 768px) {
+
+  .certs-desktop {
+    display: block;
+  }
+
+  .certs-mobile {
+    display: none;
+  }
+
+  .skills-mobile {
+    display: none;
+  }
+
+  .skills-desktop {
+    display: block;
+  }
+
   .pdf {
     display: block;
     margin: 0 auto;
